--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,9 +39,9 @@ html {
 
 .button {
   background-color: white;
-  border-color: #49006e;
+  border-color: #3BCDC5;
   border-style: solid;
-  color: #550080;
+  color: #33C090;
   box-shadow:3px 6px #84748c;
   outline: none;
   border-radius: 5px;
@@ -49,7 +49,7 @@ html {
 }
 
 .button:hover {
-  background-color: #550080;
+  background-color: #33C090;
   box-shadow: 1px 1px #84748c;
   position: relative;
   color: white;
@@ -73,6 +73,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+nav {
+  display: flex;
+  flex-direction: row;
+}
+
+
 article,
 aside,
 details,
@@ -82,7 +89,6 @@ footer,
 header,
 main,
 menu,
-nav,
 section,
 summary {
   display: block;
@@ -116,7 +122,7 @@ a {
 a:active,
 a:hover {
   outline-width: 0;
-  color: #550080;
+  color: #33C090;
 }
 abbr[title] {
   border-bottom: none;
