--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -7,16 +7,34 @@
   animation: bounce 2s ease-in 1;
 }
 
+.logo-title {
+  color: white;
+  z-index: 2;
+    position: relative;
+}
+
 .skills-container {
   margin: 0 auto;
   max-width: 750px;
-  font-family: 'Raleway';
+
 }
 
-.front-banner {
-  background: purple;
-  width: 100%;
-  height: 100px;
+.hero-img-div {
+  background-image: url('../assets/hero-background.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.tagline-div {
+  h2 {
+    font-size: 24px;
+  }
+  margin-top: 3rem;
 }
 
 .skills-list {
@@ -30,6 +48,10 @@
 .skills-item {
   margin: 15px 20px;
   text-align: center;
+}
+
+.green-text {
+  color: #33C090;
 }
 
 @keyframes bounce {
