--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,17 +21,13 @@ html {
   padding: 0rem 0rem;
 }
 
-.main-title {
-  margin-bottom: 3rem;
-  text-align: center;
-}
-
 .hero {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-bottom: 4rem;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
 }
 
 .content-div {
