--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,22 +1,7 @@
-.codepic {
-  width: 200px;
-}
-
-.picdiv {
-  margin: 20px 0px;
-  animation: bounce 2s ease-in 1;
-}
-
 .logo-title {
   color: white;
   z-index: 2;
     position: relative;
-}
-
-.skills-container {
-  margin: 0 auto;
-  max-width: 750px;
-
 }
 
 .hero-img-div {
@@ -37,21 +22,12 @@
   margin-top: 3rem;
 }
 
-.skills-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  list-style-type: none;
-  flex-wrap: wrap;
-}
-
-.skills-item {
-  margin: 15px 20px;
-  text-align: center;
-}
-
 .green-text {
   color: #33C090;
+}
+
+.landingimg {
+  margin: 0rem 2rem;
 }
 
 @keyframes bounce {
@@ -79,9 +55,12 @@
   }
 }
 
-@media only screen and (max-width: 650px) {
-  .skills-item {
-    width: 80px;
-    font-size: 14px;
+@media only screen and (min-width: 750px) {
+
+  .tagline-div {
+    margin-top: 0rem;
+    margin: 0rem 0rem;
+    max-width: 500px;
+
   }
 }
