fixed contact section styling

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -28,7 +28,8 @@
   margin: 0 .5rem;
   text-decoration: none;
   padding: 5px 10px;
-  border-style: hidden;
+  border-radius: 5px;
+  border: solid;
   font-family: 'Signika'
 }
 
