--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -16,10 +16,11 @@
 }
 
 .tagline-div {
-  h2 {
-    font-size: 24px;
+  p {
+    font-size: 20px;
   }
-  margin-top: 3rem;
+  margin-top: 1.5rem;
+  flex-grow: 1;
 }
 
 .green-text {
@@ -61,6 +62,6 @@
     margin-top: 0rem;
     margin: 0rem 0rem;
     max-width: 500px;
-
+    text-align: left;
   }
 }
