--- a/src/styles/listings.module.scss
+++ b/src/styles/listings.module.scss
@@ -1,21 +1,97 @@
-.profilepic {
-  margin: auto auto;
-  border-radius: 100px;
-}
-
-.bio {
+.listings-section {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
-  padding-bottom: 2.5rem;
+  align-items: center;
+  margin: 3rem 4rem;
 }
 
-.about-div {
-  padding: 0 0px;
+.blog-card {
+  width: 400px;
+  outline: solid;
+  list-style-type: none;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  padding: 0rem;
+  margin: 1rem 1rem;
+  outline-width: 0px;
+  outline-color: #d6d6d6;
+  -webkit-box-shadow: 10px 10px 42px -18px rgba(128,128,128,1);
+  -moz-box-shadow: 10px 10px 42px -18px rgba(128,128,128,1);
+  box-shadow: 10px 10px 42px -18px rgba(128,128,128,1);
+  justify-content: space-between;
+  
 }
 
-@media only screen and (min-width: 650px) {
-  .about-div {
+.blog-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: auto auto;
+  align-content: flex-start;
+  justify-content: center;
+}
+
+
+.blog-card:hover {
+  -webkit-box-shadow: 10px 10px 5px -200px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px -200px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px -200px rgba(0,0,0,0.75);
+  top: 10px;
+  left: 10px;
+  background-color: #fafafa;
+  .arrow-link {
+    display: none;
+  }
+}
+
+.arrow {
+  width: 50px;
+  bottom: 0;
+  right: 0;
+}
+
+.card-link {
+  width: fit-content;
+}
+
+.blog-container {
+  padding: 0 0rem;
+  li {
+    margin-left: 30px;
+  }
+  margin: 0px auto;
+  max-width: 750px;
+}
+
+.post-info {
+  margin-bottom: 0rem;
+}
+
+.address-info {
+  margin-bottom: 5px;
+}
+
+.main-listing-photo {
+  max-width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.listing-info-box {
+  padding: 1rem 1rem;
+}
+
+@media only screen and (max-width: 480px) {
+  .blog-card {
+    width: 300px;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .blog-container {
     padding: 0 2rem;
   }
 }
+
